Adding Home and Invoice controller

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "luis/phpapp",
     "autoload": {
         "psr-4": {
-            "App\\": "App"
+            "App\\": "App",
+            "Tests\\": "Tests"
         }
     },
     "authors": [
@@ -16,7 +17,8 @@
         "doctrine/dbal": "^3.2",
         "symfony/yaml": "^5.4",
         "symfony/cache": "^5.4",
-        "twig/twig": "^3.5",
-        "php-webdriver/webdriver": "^1.14"
+        "php-webdriver/webdriver": "^1.14",
+        "symfony/asset": "^6.0",
+        "twig/twig": "^3.5"
     }
 }
